# SynthoSpine-DRR

./: .gitignore  README.md  architecture.md  jobOffer_req.txt  portfolio.md  pyproject.toml
configs/: kaggle_real_split.yaml  micro_ctspine.yaml  overfit.yaml  real_overfit.yaml  real_split_prep.yaml  subset_train.yaml
docs/: colab_kaggle.md  day_01_02_paper_to_code_map.md  kaggle_real_reconstruction.md  recruiter_package.md
notebooks/: kaggle_real_reconstruction.ipynb
reports/: real_split_comparison.md  recruiter_report.md
reports/comparison_assets/: 50_pairs_14_mesh_comparison_interactive.html
reports/recruiter_assets/: 11_reconstruction_interactive.html  12_prediction_mesh_smooth.ply  13_target_mesh_smooth.ply  14_L3_mesh_comparison_interactive.html  14_mesh_comparison_interactive.html  prediction_surface.ply
reports/showcase_assets/: full_spine_lumbar_mesh.ply  full_spine_lumbar_viewer.html
src/: __init__.py  cli.py  evaluate.py  mesh3d.py  render3d.py  test_smoke.py  train_overfit.py  train_real_split.py  train_subset.py  view_volume.py
src/apps/: __init__.py  smoke.py
src/core/: __init__.py  config.py  config_io.py  schemas.py
src/data/: __init__.py  download_ctspine.py  manifest.py  medical_io.py  preprocessing.py  sampling.py  split_manifest.py  synthetic.py  volume_ops.py
src/drr/: __init__.py  generator.py
src/evaluation/: __init__.py  mesh.py  render3d.py  reporting.py  runner.py  surface.py  visualization.py  voxel.py
src/geometry/: __init__.py  projections.py
src/models/: __init__.py  layers.py  sparse_xray_to_3d.py
(+12 files in other folders)
